1999-10-05  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* mule/mule-charset.el (default-coded-charset-priority-list):
	Comment out `hiragana-jisx0208' and `katakana-jisx0208'.

1999-10-04  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* utf-2000/ccs-iso8859-2.el, utf-2000/ccs-iso8859-3.el,
	utf-2000/ccs-iso8859-4.el, utf-2000/ccs-iso8859-9.el,
	utf-2000/ccs-jisx0201-latin.el, utf-2000/ccs-viscii.el,
	utf-2000/ccs-tcvn5712.el, utf-2000/ccs-jisx0208-1983.el: Moved
	from lisp/mule.

	* mule/ccs-jisx0208-1983.el, mule/ccs-tcvn5712.el,
	mule/ccs-viscii.el, mule/ccs-iso8859-9.el,
	mule/ccs-jisx0201-latin.el, mule/ccs-iso8859-2.el,
	mule/ccs-iso8859-3.el, mule/ccs-iso8859-4.el: Moved to
	lisp/utf-2000.

1999-10-03  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* mule/ccs-tcvn5712.el: New file.

1999-10-03  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* dumped-lisp.el (preloaded-file-list): Add "ccs-jisx0208-1983.el"
	in UTF-2000.

1999-10-02  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* mule/mule-charset.el (default-coded-charset-priority-list): Add
	`japanese-jisx0208'.

1999-10-02  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* dumped-lisp.el (preloaded-file-list): Add
	"ccs-jisx0201-latin.el", "ccs-iso8859-2.el", "ccs-iso8859-3.el",
	"ccs-iso8859-4.el", "ccs-iso8859-9.el" and "ccs-viscii.el" in
	UTF-2000.

	* mule/ccs-iso8859-2.el, mule/ccs-iso8859-3.el,
	mule/ccs-iso8859-4.el, mule/ccs-iso8859-9.el,
	mule/ccs-jisx0201-latin.el, mule/ccs-jisx0208-1983.el,
	mule/ccs-viscii.el: New files.

	* bytecomp.el (byte-compile-insert-header): Don't use `raw-text'
	if \uXXXX is found.

1999-09-30  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* mule/mule-charset.el (default-coded-charset-priority-list): Add
	`hiragana-jisx0208' and `katakana-jisx0208'.

1999-09-21  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* mule/chinese.el (chinese-cns11643-3): Define it even if
	`utf-2000' is provided.
	(chinese-cns11643-4): Likewise.
	(chinese-cns11643-5): Likewise.
	(chinese-cns11643-6): Likewise.