@@ -32,7 +32,7 @@
 
 ;; Vietnamese VISCII with two tables.
 (unless (featurep 'utf-2000)
-  (make-charset 'vietnamese-viscii-lower "VISCII lower (Vietnamese)"
+  (make-charset 'latin-viscii-lower "VISCII lower (Vietnamese)"
 		'(registry "VISCII1.1"
 		  dimension 1
 		  chars 96
@@ -40,7 +40,7 @@
 		  graphic 1
 		  ))
 
-  (make-charset 'vietnamese-viscii-upper "VISCII upper (Vietnamese)"
+  (make-charset 'latin-viscii-upper "VISCII upper (Vietnamese)"
 		'(registry "VISCII1.1"
 		  dimension 1
 		  chars 96
@@ -48,6 +48,9 @@
 		  graphic 1
 		  ))
   )
+
+(define-charset-alias 'vietnamese-viscii-lower 'latin-viscii-lower)
+(define-charset-alias 'vietnamese-viscii-upper 'latin-viscii-upper)
 
 (modify-syntax-entry 'vietnamese-viscii-lower "w")
 (modify-syntax-entry 'vietnamese-viscii-upper "w")
