@@ -1,3 +1,14 @@
+1999-10-07  MORIOKA Tomohiko  <tomo@etl.go.jp>
+
+	* mule/viet-chars.el (latin-viscii-lower): Renamed from charset
+	`vietnamese-viscii-lower'.
+	(latin-viscii-upper): Renamed from charset
+	`vietnamese-viscii-upper'.
+	(vietnamese-viscii-lower): New alias for charset
+	`latin-viscii-lower'.
+	(vietnamese-viscii-upper): New alias for charset
+	`latin-viscii-upper'.
+
 1999-10-05  MORIOKA Tomohiko  <tomo@etl.go.jp>
 
 	* mule/mule-charset.el (default-coded-charset-priority-list):
